CSS fix so that whole login part of the page will be above the keyboard on mobile devices

--- a/static/css/src/login.css
+++ b/static/css/src/login.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     font-family: Helvetica, sans-serif;
     font-size: 1em;
+    height: 100%;
 }
 
 #hero {
@@ -12,7 +13,6 @@ html, body {
     border: 0;
     width: 100%;
     z-index: -2;
-    height: 100%;
 }
 
 .flashes {
@@ -58,9 +58,20 @@ html, body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20%;
     color: #fff;
     max-width: 550px;
+}
+
+@media(min-height>=800px) {
+    #form-container {
+        margin-top: 20%;
+    }
+}
+
+@media(max-height: 800px) {
+    #form-container {
+        margin-top: 1em;
+    }
 }
 
 form {
